--- a/src/BlazorApp.Client/Routes.razor
+++ b/src/BlazorApp.Client/Routes.razor
@@ -1,6 +1,6 @@
 ﻿<Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(BlazorApp.Shared._Imports).Assembly} ">
 	<Found Context="routeData">
-		<RouteView RouteData="routeData" DefaultLayout="typeof(BlazorApp.Shared.Layout.MainLayout)" />
+		<RouteView RouteData="routeData" DefaultLayout="typeof(Shared.Layout.MainLayout)" />
 		<FocusOnNavigate RouteData="routeData" Selector="h1" />
 	</Found>
 </Router>
