Update packages, refactor code, and adjust UI components
Updated various package versions in project files to ensure the use of the latest stable dependencies. Refactored code by removing redundant properties and imports, simplifying UI components, and making properties nullable where appropriate. Adjusted UI components to reflect changes in expected HTML output and made role names case-sensitive. Modified and removed test cases to align with the updated codebase.

--- a/src/BlazorApp.Shared/Components/UserInfo.razor
+++ b/src/BlazorApp.Shared/Components/UserInfo.razor
@@ -1,23 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
-@if (_isAuthenticated)
-{
-	<h1>Welcome @_userName</h1>
-}
-@if (!_isAuthenticated)
-{
-	<h1>Please log in!</h1>
-}
 <AuthorizeView>
 	<Authorized>
-		<p>State: Authorized</p>
+		<p>Welcome @_userName</p>
 	</Authorized>
 	<Authorizing>
 		<p>State: Authorizing</p>
 	</Authorizing>
 	<NotAuthorized>
-		<p>State: Not authorized</p>
+		<p>Please log in!</p>
 	</NotAuthorized>
 </AuthorizeView>
 @code
@@ -29,6 +21,6 @@
 	{
 		var state = await AuthenticationStateProvider.GetAuthenticationStateAsync();
 		_isAuthenticated = state.User.Identity!.IsAuthenticated;
-		_userName = state.User.Identity.Name!;    
+		_userName = state.User.Identity?.Name!;
 	}
 }
