--- a/src/BlazorApp.Shared/Layout/MainLayout.razor
+++ b/src/BlazorApp.Shared/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Components.Authorization;
+@using BlazorApp.Shared.Components
 
 <div class="page">
 	<div class="sidebar">
@@ -7,18 +8,18 @@
 	</div>
 
 	<main>
-		<div class="top-row px-4">
-			<AuthorizeView Roles="Admin">
-				<Authorized>
-					Authorised as Admin
-				</Authorized>
+		<span class="top-row px-4">
+			<AuthorizeView>
+				@*<Authorized>
+					<UserInfo />
+				</Authorized>*@
 				<NotAuthorized>
 					Not Authorised
 				</NotAuthorized>
 			</AuthorizeView>
 
 			<BlazorApp.Shared.Security.Login />
-		</div>
+		</span>
 
 		<article class="content px-4">
 			@Body
@@ -32,3 +33,6 @@
 	<a class="dismiss">🗙</a>
 </div>
 
+@code{
+
+}
