--- a/src/BlazorApp.Shared/Security/Login.razor
+++ b/src/BlazorApp.Shared/Security/Login.razor
@@ -1,8 +1,10 @@
 @using Microsoft.AspNetCore.Components.Authorization
+@using BlazorApp.Shared.Components
 @inject ILoginProvider LoginProvider
 
 <AuthorizeView>
 	<Authorized>
+		<UserInfo />
 		<a @onclick="LogoutAsync">Log out</a>
 	</Authorized>
 	<NotAuthorized>
