--- a/src/BlazorApp.Shared/Layout/MainLayout.razor
+++ b/src/BlazorApp.Shared/Layout/MainLayout.razor
@@ -10,11 +10,8 @@
 	<main>
 		<span class="top-row px-4">
 			<AuthorizeView>
-				@*<Authorized>
-					<UserInfo />
-				</Authorized>*@
 				<NotAuthorized>
-					Not Authorised
+					<span class="unauthorized">Not Authorised</span>
 				</NotAuthorized>
 			</AuthorizeView>
 
