--- a/src/BlazorApp.Shared/Layout/MainLayout.razor.css
+++ b/src/BlazorApp.Shared/Layout/MainLayout.razor.css
@@ -21,17 +21,17 @@ main {
 	align-items: center;
 }
 
-	.top-row ::deep a, .top-row ::deep .btn-link {
+	.top-row a, .top-row .btn-link {
 		white-space: nowrap;
 		margin-left: 1.5rem;
 		text-decoration: none;
 	}
 
-		.top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
+		.top-row a:hover, .top-row .btn-link:hover {
 			text-decoration: underline;
 		}
 
-		.top-row ::deep a:first-child {
+		.top-row a:first-child {
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
@@ -41,7 +41,7 @@ main {
 		justify-content: space-between;
 	}
 
-		.top-row ::deep a, .top-row ::deep .btn-link {
+		.top-row a, .top-row .btn-link {
 			margin-left: 0;
 		}
 }
@@ -64,7 +64,7 @@ main {
 		z-index: 1;
 	}
 
-		.top-row.auth ::deep a:first-child {
+		.top-row.auth a:first-child {
 			flex: 1;
 			text-align: right;
 			width: 0;
