--- a/src/BlazorApp.Shared/Layout/NavMenu.razor.css
+++ b/src/BlazorApp.Shared/Layout/NavMenu.razor.css
@@ -59,7 +59,7 @@
         padding-bottom: 1rem;
     }
 
-    .nav-item ::deep .nav-link {
+    .nav-item .nav-link {
         color: #d7d7d7;
         background: none;
         border: none;
@@ -71,12 +71,12 @@
         width: 100%;
     }
 
-.nav-item ::deep a.active {
+.nav-item a.active {
     background-color: rgba(255,255,255,0.37);
     color: white;
 }
 
-.nav-item ::deep .nav-link:hover {
+.nav-item .nav-link:hover {
     background-color: rgba(255,255,255,0.1);
     color: white;
 }
